--- a/src/style.css
+++ b/src/style.css
@@ -1,1 +1,33 @@
-@import "~bootstrap/dist/css/bootstrap.min.css";
+body {
+  background-color: rgb(19, 110, 55);
+}
+
+.carta {
+  background-color: white;
+  width: 250px;
+  height: 380px;
+  border-radius: 15px;
+  margin: auto;
+  padding: 20px;
+  position: relative;
+}
+
+.top-suit {
+  position: absolute;
+  top: 5px;
+  left: 15px;
+  font-size: 80px;
+}
+.bottom-suit {
+  position: absolute;
+  bottom: 5px;
+  right: 15px;
+  font-size: 80px;
+}
+
+.number {
+  font-size: 80px;
+  position: absolute;
+  top: 150px;
+  right: 120px;
+}
